--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "description": "KubeFoundry Backend API",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "bun --watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "bun src/index.ts",
+    "compile": "bun build --compile --outfile dist/kubefoundry src/index.ts",
     "lint": "eslint src --ext .ts",
-    "test": "vitest run"
+    "test": "bun test"
   },
   "dependencies": {
     "@kubernetes/client-node": "^0.21.0",
@@ -17,12 +18,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
     "eslint": "^8.56.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
-    "vitest": "^1.1.3"
+    "typescript": "^5.3.3"
   }
 }
