--- a/shared/package.json
+++ b/shared/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kubefoundry/shared",
   "version": "1.0.0",
-  "description": "Shared types for KubeFoundry",
+  "description": "Shared types and API client for KubeFoundry",
   "type": "module",
   "main": "./types/index.ts",
   "types": "./types/index.ts",
@@ -10,6 +10,11 @@
       "types": "./types/index.ts",
       "import": "./types/index.ts",
       "default": "./types/index.ts"
+    },
+    "./api": {
+      "types": "./api/index.ts",
+      "import": "./api/index.ts",
+      "default": "./api/index.ts"
     }
   },
   "scripts": {
