Extract providers into independent out-of-tree operators
- Strip all provider code from main controller (zero provider knowledge)
- Move Dynamo provider to providers/dynamo/ as standalone Go module
- Add cmd/main.go, Dockerfile, and Kustomize manifests for each provider
- Each provider runs as its own pod with scoped RBAC
- Providers self-register via InferenceProviderConfig CRD
- Implement CEL expression evaluation for provider selection rules
- Add alphabetical tiebreaking for equal priority providers
- Add Makefile targets for provider build/deploy

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,10 @@ temp/
 # Generated files
 backend/src/embedded-assets.ts
 
+# Go workspace
+go.work
+go.work.sum
+
 # Playwright
 /test-results/
 /playwright-report/
