--- a/controller/config/default/manager_webhook_patch.yaml
+++ b/controller/config/default/manager_webhook_patch.yaml
@@ -1,18 +1,5 @@
 # This patch ensures the webhook certificates are properly mounted in the manager container.
-# It configures the necessary arguments, volumes, volume mounts, and container ports.
-
-# Add the --webhook-cert-path argument for configuring the webhook certificate path
-- op: add
-  path: /spec/template/spec/containers/0/args/-
-  value: --webhook-cert-path=/tmp/k8s-webhook-server/serving-certs
-
-# Add the volumeMount for the webhook certificates
-- op: add
-  path: /spec/template/spec/containers/0/volumeMounts/-
-  value:
-    mountPath: /tmp/k8s-webhook-server/serving-certs
-    name: webhook-certs
-    readOnly: true
+# cert-controller generates and rotates certs, writing them to the CertDir.
 
 # Add the port configuration for the webhook server
 - op: add
@@ -22,10 +9,25 @@
     name: webhook-server
     protocol: TCP
 
-# Add the volume configuration for the webhook certificates
+# Add POD_NAMESPACE env var for cert-controller to discover its namespace
+- op: add
+  path: /spec/template/spec/containers/0/env
+  value:
+    - name: POD_NAMESPACE
+      valueFrom:
+        fieldRef:
+          fieldPath: metadata.namespace
+
+# Add the volumeMount for cert-controller to write webhook certificates
+- op: add
+  path: /spec/template/spec/containers/0/volumeMounts/-
+  value:
+    mountPath: /tmp/k8s-webhook-server/serving-certs
+    name: cert-dir
+
+# Add an emptyDir volume for cert-controller to write certificates
 - op: add
   path: /spec/template/spec/volumes/-
   value:
-    name: webhook-certs
-    secret:
-      secretName: webhook-server-cert
+    name: cert-dir
+    emptyDir: {}
