--- a/controller/config/rbac/kustomization.yaml
+++ b/controller/config/rbac/kustomization.yaml
@@ -18,6 +18,8 @@ resources:
 - metrics_auth_role.yaml
 - metrics_auth_role_binding.yaml
 - metrics_reader_role.yaml
+- cert_rotation_role.yaml
+- cert_rotation_rolebinding.yaml
 # For each CRD, "Admin", "Editor" and "Viewer" roles are scaffolded by
 # default, aiding admins in cluster management. Those roles are
 # not used by the controller itself. You can comment the following lines
