--- a/providers/kaito/config/manager/kustomization.yaml
+++ b/providers/kaito/config/manager/kustomization.yaml
@@ -2,7 +2,7 @@ resources:
 - manager.yaml
 images:
 - name: IMAGE_PLACEHOLDER
-  newName: docker.io/sozercan/kubefoundry-kaito-provider
+  newName: ghcr.io/kubefoundry/kaito-provider
   newTag: latest
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
