fix: resolve CI test failures
- Add bun-types to minimumReleaseAgeExcludes in bunfig.toml
- Rename @kubefoundry/shared to @kubeairunway/shared in headlamp plugin
- Fix incorrect assertion in helm.test.ts for featureGates values

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -12,4 +12,4 @@ frozenLockfile = false
 minimumReleaseAge = 259200
 
 # Exclude critical packages from age gate to allow urgent security patches
-minimumReleaseAgeExcludes = ["@types/bun", "@types/node", "typescript"]
+minimumReleaseAgeExcludes = ["@types/bun", "@types/node", "typescript", "bun-types"]
