--- a/backend/package.json
+++ b/backend/package.json
@@ -23,17 +23,22 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.5",
     "@kubernetes/client-node": "^0.21.0",
+    "better-sqlite3": "^12.6.2",
     "cors": "^2.8.5",
+    "drizzle-orm": "^0.45.1",
     "hono": "^4.10.7",
     "js-yaml": "^4.1.1",
     "pino": "^10.1.0",
+    "postgres": "^3.4.8",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/bun": "latest",
     "@types/cors": "^2.8.17",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.10.6",
+    "drizzle-kit": "^0.31.9",
     "eslint": "^8.56.0",
     "pino-pretty": "^13.1.3",
     "typescript": "^5.3.3"
