--- a/providers/kaito/config/manager/kustomization.yaml
+++ b/providers/kaito/config/manager/kustomization.yaml
@@ -2,7 +2,7 @@ resources:
 - manager.yaml
 images:
 - name: IMAGE_PLACEHOLDER
-  newName: ghcr.io/kaito-project/kaito-provider
-  newTag: latest
+  newName: docker.io/sozercan/kaito-provider
+  newTag: engine-autoselect
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
